#Integration commit
Для проверки взаимодействия модулей:
- реализованы интеграционные тесты.